WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205569
REGRESSION (
r253634
): Reproducible crash going back and forward on goodreads.com in Page::setPageScaleFactor
https://bugs.webkit.org/show_bug.cgi?id=205569
Summary
REGRESSION (r253634): Reproducible crash going back and forward on goodreads....
Simon Fraser (smfr)
Reported
2019-12-23 15:31:52 PST
REGRESSION (
r253634
): Reproducible crash going back and forward on goodreads.com in Page::setPageScaleFactor
Attachments
Patch
(1.58 KB, patch)
2019-12-23 15:33 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-12-23 15:33:32 PST
Created
attachment 386361
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-12-23 15:33:58 PST
rdar://problem/58138015
WebKit Commit Bot
Comment 3
2019-12-23 18:33:26 PST
The commit-queue encountered the following flaky tests while processing
attachment 386361
[details]
: imported/w3c/web-platform-tests/IndexedDB/keyorder.htm
bug 205575
(authors:
cdumez@apple.com
,
shvaikalesh@gmail.com
, and
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2019-12-23 18:34:18 PST
Comment on
attachment 386361
[details]
Patch Clearing flags on attachment: 386361 Committed
r253897
: <
https://trac.webkit.org/changeset/253897
>
WebKit Commit Bot
Comment 5
2019-12-23 18:34:19 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug