REGRESSION (r253634): Reproducible crash going back and forward on goodreads.com in Page::setPageScaleFactor https://bugs.webkit.org/show_bug.cgi?id=205569

Reviewed by Wenson Hsieh.

When going quickly back and forward, WebPage::didCommitLoad/WebPage::viewportConfigurationChanged/WebPage::scalePage
can be called for a page in the page cache, so the FrameView can be null.

Null-check the view here like the surrounding code does.

* page/Page.cpp:
(WebCore::Page::setPageScaleFactor):


Canonical link: https://commits.webkit.org/218773@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253897 268f45cc-cd09-0410-ab3c-d52691b4dbfc